--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -27,5 +27,5 @@
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "_plantshare_navigation.html" %}
+    {% include "_plantshare_navigation.html" with show_login="true" %}
 {% endblock %}
