--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -470,27 +470,35 @@ footer .support { margin-right: 0; padding: 18px 0; }
   #home .donate a { float: none; margin: 6px 0; position: static; } }
 /* End media queries styles for the Home page */
 /* PlantShare */
-body.plantshare .join { background-color: #fff; border: 1px solid #c3d941; padding: 4px 16px 16px; width: 475px; }
-body.plantshare .join ul { line-height: 18px; list-style-position: inside; margin: 10px 0 0 24px; }
-body.plantshare .join a { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat 0 -3px; height: 41px; margin: 12px auto 0; width: 244px; display: block; text-indent: -9000px; }
-body.plantshare .join a:hover { background-position: 0 -88px; }
-body.plantshare .join a:active { background-position: 0 -46px; }
+body.plantshare .content form { padding: 16px 0; }
+body.plantshare .content form label { display: block; margin-bottom: 4px; text-transform: uppercase; }
+body.plantshare .content form input { border: 1px solid #c3d941; font-family: Verdana, Geneva, sans-serif; height: 16px; margin-bottom: 10px; padding: 5px; width: 350px; }
+body.plantshare#plantshare .join { background-color: #fff; border: 1px solid #c3d941; padding: 4px 16px 16px; width: 475px; }
+body.plantshare#plantshare .join ul { line-height: 18px; list-style-position: inside; margin: 10px 0 0 24px; }
+body.plantshare#plantshare .join a { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat 0 -3px; height: 41px; margin: 12px auto 0; width: 244px; display: block; text-indent: -9000px; }
+body.plantshare#plantshare .join a:hover { background-position: 0 -88px; }
+body.plantshare#plantshare .join a:active { background-position: 0 -46px; }
+body.plantshare#join #main form input { width: 350px; }
+body.plantshare#join #main form input.button { background: transparent url(../images/layout/plantshare-btns.png) no-repeat -1px -359px; border: 0; height: 41px; margin-top: 12px; width: 244px; display: block; text-indent: -9000px; }
+body.plantshare#join #main form input.button:hover { background-position: -1px -402px; }
+body.plantshare#join #main form input.button:active { background-position: -1px -444px; }
 body.plantshare #sidebar #login.box { background: #d3eaad; border: 1px solid #508e31; padding: 0; }
 body.plantshare #sidebar #login.box h4 { font-size: 20px; padding: 16px 16px 10px; }
 body.plantshare #sidebar #login.box form { padding: 0 16px 16px; }
-body.plantshare #sidebar #login.box form label { display: block; font-size: 10px; margin-bottom: 4px; text-transform: uppercase; }
-body.plantshare #sidebar #login.box form input { border: 1px solid #508e31; font-family: Verdana, Geneva, sans-serif; height: 16px; margin-bottom: 10px; padding: 5px; width: 95%; }
-body.plantshare #sidebar #login.box form input.button.login { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -169px -231px; border: 0; height: 32px; width: 99px; display: block; text-indent: -9000px; }
-body.plantshare #sidebar #login.box form input.button.login:hover { background-position: -169px -265px; }
-body.plantshare #sidebar #login.box form input.button.login:active { background-position: -169px -299px; }
+body.plantshare #sidebar #login.box form label { font-size: 10px; }
+body.plantshare #sidebar #login.box form input { border-color: #508e31; width: 95%; }
+body.plantshare #sidebar #login.box form input.button { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -169px -231px; border: 0; height: 32px; width: 99px; display: block; text-indent: -9000px; }
+body.plantshare #sidebar #login.box form input.button:hover { background-position: -169px -265px; }
+body.plantshare #sidebar #login.box form input.button:active { background-position: -169px -299px; }
 body.plantshare #sidebar #login.box div { border-top: 1px solid #508e31; padding: 16px; }
 
 /* Begin media queries styles for PlantShare. */
 /* Portrait-orientation styles */
 /* Landscape-orientation styles */
 /* These styles are common to both smartphone widths */
-@media only screen and (max-width: 600px) { body.plantshare .join { width: auto; }
-  body.plantshare .join ul { margin-left: 0; } }
+@media only screen and (max-width: 600px) { body.plantshare#plantshare .join { width: auto; }
+  body.plantshare#plantshare .join ul { margin-left: 0; }
+  body.plantshare#join #main form input { width: 290px; } }
 /* These styles apply to smartphones and tablets */
 /* End media queries styles for PlantShare */
 /* Dichotomous Key */
