--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -51,7 +51,7 @@
         <!-- <script src="/static/scripts/require.js"></script> -->
         <script>
             {% if in_production %}
-            require(["/static/build/deploy/gobotany.application.js"], function(app) {
+            require(["/static/js/gobotany.application.js"], function(app) {
             {% endif %}
 
             require(['util/activate_search_suggest']);
