Make the registration form button look pretty.

--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -43,7 +43,8 @@ body.plantshare {
             }            
         }
     }
-    &#join #main {
+    &#join #main, 
+    &#register #main {
         form input {
             width: 350px;
             &.button {
