--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -1,4 +1,5 @@
 {% extends "simplekey/_new_base.html" %}
+{% load gobotany_tags %}
 {% load humanize %}
 {% load search_highlight %}
 {% load simplekey_extras %}
@@ -38,7 +39,7 @@
                     <li>
                         {% search_highlight result.title with query as item_title excerpt 'False' %}
                         {% if result.model_name == 'taxon' %}
-                            <a href="{{ url_base }}/species/{{ result.scientific_name|split:' '|at_index:'0'|lower }}/{{ result.scientific_name|split:' '|at_index:'1'|lower }}/"><img 
+                            <a href="{{ result|url }}"><img
                                 src="/static/images/icons/icon-leaf.png"
                                 alt="" title="Species page">
                             {{ item_title|italicize_plant|safe }}</a>
