Replaced glossary pages with terms in the index

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -58,7 +58,7 @@
                                 src="/static/images/icons/icon-help.png"
                                 alt="" title="Help page">
                         {% endif %}
-                        {% if result.model_name == 'glossarypage' %}
+                        {% if result.model_name == 'glossaryterm' %}
                             <img
                                 src="/static/images/icons/icon-glossary.png"
                                 alt="" title="Glossary page">
