--- a/gobotany/site/templates/gobotany/glossary.html
+++ b/gobotany/site/templates/gobotany/glossary.html
@@ -33,9 +33,13 @@
         {% for term in glossary %}
             <dt>
                 {% if term.image %}
-                    <a rel="shadowbox" href="{{ term.image.url }}">
-                        <img alt="{{ term.term }}" 
-                        src="/static/images/icons/icon-camera.png"></a>
+                    <a name="term-{{ term.term|slugify }}" rel="shadowbox"
+                       href="{{ term.image.url }}">
+                        <img alt="{{ term.term }}"
+                             src="/static/images/icons/icon-camera.png">
+                    </a>
+                {% else %}
+                    <a name="term-{{ term.term|slugify }}"></a>
                 {% endif %}
                 {{ term.term }}
             </dt>
