PlantShare: link to working registration form.
Title is now Sign Up, like Twitter or FB rather than Join, Register. (#223)

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -5,8 +5,8 @@
         <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>PlantShare</a></h4>
     </div>
     <div class="section">
-        {% url ps-join as u %}
-        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Join PlantShare</a></h4>
+        {% url registration_register as u %}
+        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Sign Up for PlantShare</a></h4>
     </div>
 </div>
 
