--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -11,8 +11,8 @@
     <a href="#login">Log In</a>
 </div>
 
-<div class="join">
-    <h2>Join PlantShare!</h2>
+<div class="sign-up">
+    <h2>Sign up for PlantShare!</h2>
     <p>As a registered member of PlantShare, you will be able to:<p>
     <ul>
         <li>Upload photos of plants to share with others</li>
@@ -21,7 +21,7 @@
         <li>Ask one of our expert botanists questions</li>
         <li>Share your thoughts and musings with others</li>
     </li>
-    <a href="join/">Get Started</a>
+    <a href="accounts/register/">Get Started</a>
 </div>
 
 {% endblock %}
