Rename a CSS class to describe the content it encloses.
This is in preparation for limiting the size of the working-area character image.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -43,7 +43,7 @@
                     <h4></h4>
                     <div>
                         <div class="info">
-                            <div class="dld"></div>
+                            <div class="character-drawing"></div>
                             <div class="hint"></div>
                             <div class="values"></div>
                             <div class="actions">
