--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -692,7 +692,7 @@ h5.help { padding: 3px 0 0 0; margin: 0 0 0 0; }
 
 .working-area .info .hint p { font-size: 14px; line-height: 140%; margin-bottom: 4px; }
 
-.working-area .dld { float: right; }
+.working-area .character-drawing { float: right; }
 
 .working-area li { display: block; float: left; margin: 0 8px 15px 0; }
 
