--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -1314,7 +1314,7 @@ h5.help {
     line-height: 140%;
     margin-bottom: 4px;
 }
-.working-area .dld {
+.working-area .character-drawing {
   float: right;
 }
 .working-area li {
