Make the login form actually log in.
For now, show just a simple "Hello" indicator that we're logged in,
until we flesh out a real user dashboard page.

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -10,15 +10,28 @@
     </div>
 </div>
 
-{% if show_login %}
+{% if user.is_authenticated %}
+<div id="login" class="box">
+    <h4>Hello, {{ user.first_name|default:user.username }}</h4>
+    <a href="{% url auth_logout %}" class="button">Log Out</a>
+</div>
+{% else %}
 <div id="login" class="box">
     <h4>Log In</h4>
-    <form action="post">
-        <label for="username">Username</label>
-        <input id="username" type="text">
-        <label for="password">Password</label>
-        <input id="password" type="password">
+    <form method="post" action="{% url auth_login %}">
+        {% csrf_token %}
+        {% comment %} 
+        Conform to Django auth's AuthenticationForm fields for now, until we create
+        a nice template tag or widget for this, so it can appear on every page.
+        Otherwise, we'd have to manually create an AuthenticationForm in every single
+        view or create a context processor for it.
+        {% endcomment %}
+        <label for="id_username">Username</label>
+        <input id="id_username" type="text" name="username" maxlength="30" />
+        <label for="id_password">Password</label>
+        <input type="password" name="password" id="id_password" />
         <input type="submit" class="button" value="Login">
+        <input type="hidden" name="next" value="{% url ps-main %}" />
     </form>
     <div>
         <a href="#">
