Search: improve heading on results pages after the first one.
Remove 'of' which read as if the page number and results count were
tied together.

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -23,7 +23,7 @@
                 <h2>
                     {% if paginator.count > 0 %}
                         {% if page.number > 1 %}
-                            Page {{ page.number }} of
+                            Page {{ page.number }}:
                         {% endif %}
                         {{ paginator.count|intcomma }}
                     {% else %}
