PlantShare: shorten a sentence.

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -13,7 +13,7 @@
 
 <div class="sign-up">
     <h2>Sign up for PlantShare!</h2>
-    <p>As a registered member of PlantShare, you will be able to:<p>
+    <p>As a member of PlantShare, you will be able to:<p>
     <ul>
         <li>Upload photos of plants to share with others</li>
         <li>Create checklists of plants you want to keep track of</li>
