PlantShare signup: make button value match its screen label. (#223)

--- a/gobotany/plantshare/templates/registration/registration_form.html
+++ b/gobotany/plantshare/templates/registration/registration_form.html
@@ -17,7 +17,7 @@ with a link to activate your account.</p>
 <form method="post" action=".">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" class="button" value="Register" />
+    <input type="submit" class="button" value="Sign Me Up" />
 </form>
 
 {% endblock %}
